# shower

./: README.md  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/conversation/: functions.ts  page.tsx
app/review/: functions.ts  page.tsx
app/setup/: page.tsx
app/types/: index.ts
app/utils/: conversation.ts
components/modals/: PersonaModal.tsx  ScenarioModal.tsx
python/: conversation_poc.ipynb  conversation_poc.py  pyproject.toml
redux/: store.ts
redux/slices/: authSlice.ts  conversationSlice.ts  personaSlice.ts  scenarioSlice.ts  storySlice.ts
services/: audioService.ts
types/: Auth.ts  Persona.ts  Scenario.ts  Story.ts
